schema/testdata/validation_lhs_rhs_type_mismatch/schema.keel
model Post {
  fields {
    title Text
  }

  @permission(
    expression: post.title == 12,
    actions: [get]
  )
}
